<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/person">



    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="384dp"
        android:layout_height="132dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_txt"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="281dp"
        android:layout_height="62dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/name_hint_text"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue_200">


        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_txt"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etWeight"
        android:layout_width="281dp"
        android:layout_height="62dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/weight_hint_txt"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />


</androidx.constraintlayout.widget.ConstraintLayout>